  collection of tasks that should run before the coverage report is generated.

- Users who need to use older versions of Cobertura can now do so without the
  Cobertura libraries getting in the way. Some options, such as
  coverageIgnoreTrivial only work in Cobertura 2.0, so attempting to set those
  properties in the cobertura block of your build.gradle will result in an
  error.

- Groovy and Scala plugins may now be applied after the cobertura plugin.

- If the coberturaReport is in the task graph, the up-to-date status of all
  tests is set to false (issue #33)

- A Cobertura Check task has been implemented (issue #29) to check test coverage
  levels.

- I've added more tests, and hope to add even more soon.

Changes for 2.1.0
=================
- Added the coberturaReport task to generate coverage reports. (issue #20)

- The cobertura task now depends on tasks of type test in the applying project,
  and tasks named test in child projects (but not all tasks of type test in the
  child project).  It no longer runs tests in parent projects, sibling projects
  or tests in child projects that are not named "test". (issue #14)

- The coverageSourceDirs extension property now looks for scala and groovy code
  by default. (issues #7 and #22)

- Instrumentation now happens only when source code has changed or the cobertura
  configuration has changed. (issue #23)

- Instrumentation now depends on the classes task so that changes to Groovy
  or Scala source code triggers re-instrumentation. (issue #15)

- The plugin adjusts dependencies for test tasks added after the plugin is
  applied (issue #21)

Changes for 2.0.0
=================
- Updated the plugin to work with Gradle 1.7.  Dropped support for prior
  versions of Gradle.

Changes for 1.2.0
=================
- Added support for Cobertura 2.0 and its extra configuration options.

- Fixed bug that caused the configuration of test tasks to fail on sub-projects
  that don't have the coberura plugin applied. (issue #8)