@@ -43,7 +43,7 @@ class CoberturaPluginApplyTest {
 		assertTrue("cobertura task is the wrong type", task instanceof DefaultTask)
 		assertTrue("cobertura task should be enabled", task.enabled)
 		assertTaskDependsOn(task, CoberturaPlugin.COBERTURA_REPORT_TASK_NAME)
-		assertTaskDoesNotDependOn(task, CoberturaPlugin.CHECK_COVERAGE_TASK_NAME)
+		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_CHECK_TASK_NAME)
 		assertTaskDoesNotDependOn(task, InstrumentTask.NAME)
 		assertTaskDoesNotDependOn(task, CopyDatafileTask.NAME)
 		assertTaskDoesNotDependOn(task, GenerateReportTask.NAME)
@@ -62,7 +62,7 @@ class CoberturaPluginApplyTest {
 		assertTrue("coberturaReport task is the wrong type", task instanceof DefaultTask)
 		assertTrue("coberturaReport task should be enabled", task.enabled)
 		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_TASK_NAME)
-		assertTaskDoesNotDependOn(task, CoberturaPlugin.CHECK_COVERAGE_TASK_NAME)
+		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_CHECK_TASK_NAME)
 		assertTaskDoesNotDependOn(task, InstrumentTask.NAME)
 		assertTaskDoesNotDependOn(task, CopyDatafileTask.NAME)
 		assertTaskDoesNotDependOn(task, GenerateReportTask.NAME)
@@ -76,12 +76,12 @@ class CoberturaPluginApplyTest {
 	@Test
 	void applyPluginCheckCoverageTask() {
 		project.apply plugin: 'cobertura'
-		def task = project.tasks.findByName(CoberturaPlugin.CHECK_COVERAGE_TASK_NAME)
+		def task = project.tasks.findByName(CoberturaPlugin.COBERTURA_CHECK_TASK_NAME)
 		assertNotNull("Project is missing checkCoverage task", task)
 		assertTrue("checkCoverage task is the wrong type", task instanceof DefaultTask)
 		assertTrue("checkCoverage task should be enabled", task.enabled)
 		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_TASK_NAME)
-		assertTaskDoesNotDependOn(task, CoberturaPlugin.CHECK_COVERAGE_TASK_NAME)
+		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_CHECK_TASK_NAME)
 		assertTaskDoesNotDependOn(task, InstrumentTask.NAME)
 		assertTaskDoesNotDependOn(task, CopyDatafileTask.NAME)
 		assertTaskDoesNotDependOn(task, GenerateReportTask.NAME)
@@ -101,7 +101,7 @@ class CoberturaPluginApplyTest {
 		assertFalse("instrument task should not be enabled", task.enabled)
 		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_TASK_NAME)
 		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_REPORT_TASK_NAME)
-		assertTaskDoesNotDependOn(task, CoberturaPlugin.CHECK_COVERAGE_TASK_NAME)
+		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_CHECK_TASK_NAME)
 		assertTaskDoesNotDependOn(task, CopyDatafileTask.NAME)
 		assertTaskDoesNotDependOn(task, GenerateReportTask.NAME)
 		assertTaskDoesNotDependOn(task, PerformCoverageCheckTask.NAME)
@@ -120,7 +120,7 @@ class CoberturaPluginApplyTest {
 		assertFalse("copyCoberturaDatafile task should not be enabled", task.enabled)
 		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_TASK_NAME)
 		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_REPORT_TASK_NAME)
-		assertTaskDoesNotDependOn(task, CoberturaPlugin.CHECK_COVERAGE_TASK_NAME)
+		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_CHECK_TASK_NAME)
 		assertTaskDependsOn(task, InstrumentTask.NAME)
 		assertTaskDoesNotDependOn(task, CopyDatafileTask.NAME)
 		assertTaskDoesNotDependOn(task, GenerateReportTask.NAME)
@@ -141,7 +141,7 @@ class CoberturaPluginApplyTest {
 		assertFalse("generateCoberturaReport task should not be enabled", task.enabled)
 		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_TASK_NAME)
 		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_REPORT_TASK_NAME)
-		assertTaskDoesNotDependOn(task, CoberturaPlugin.CHECK_COVERAGE_TASK_NAME)
+		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_CHECK_TASK_NAME)
 		assertTaskDoesNotDependOn(task, InstrumentTask.NAME)
 		assertTaskDoesNotDependOn(task, CopyDatafileTask.NAME)
 		assertTaskDoesNotDependOn(task, PerformCoverageCheckTask.NAME)
@@ -160,7 +160,7 @@ class CoberturaPluginApplyTest {
 		assertFalse("performCoverageCheck task should not be enabled", task.enabled)
 		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_TASK_NAME)
 		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_REPORT_TASK_NAME)
-		assertTaskDoesNotDependOn(task, CoberturaPlugin.CHECK_COVERAGE_TASK_NAME)
+		assertTaskDoesNotDependOn(task, CoberturaPlugin.COBERTURA_CHECK_TASK_NAME)
 		assertTaskDoesNotDependOn(task, InstrumentTask.NAME)
 		assertTaskDoesNotDependOn(task, CopyDatafileTask.NAME)
 		assertTaskDependsOn(task, GenerateReportTask.NAME)
